Closed Bug 1712875 Opened 5 years ago Closed 5 years ago

Fix the union of the flex items' margin boxes which we add flex container's padding to

Categories

(Core :: Layout: Flexbox, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- wontfix
firefox90 --- fixed

People

(Reporter: TYLin, Assigned: TYLin)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached file Testcase 1

In bug 1697349, we include the flex container's padding by inflating the union of flex items' margin boxes. However, nsIFrame::GetMarginRect() returns the margin rect that is shifted by position: relative, so it probably doesn't make sense to see flex container's padding at the edge of a position: relative flex item.

See Testcase 1. On Google Chrome and Safari, the flex container doesn't have scrollbars. Firefox 88 also has no scrollbars.

Set release status flags based on info from the regressing bug 1697349

Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/c786a99f4a5b Inflate flex container's padding by using the union of flex items' normal position margin boxes. r=dholbert
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/29131 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Upstream PR merged by moz-wptsync-bot
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: