Bug 1712875 - Inflate flex container's padding by using the union of flex items' normal position margin boxes. r=dholbert

Also, revise the comment based on what we are currently doing.

Differential Revision: https://phabricator.services.mozilla.com/D116025